syntax = "proto3";

package core.organization;
option go_package = "github.com/ca-risken/core/proto/organization";

// Organization message
message Organization {
  uint32 organization_id = 1;
  string name = 2;
  string description = 3;
  int64 created_at = 5;
  int64 updated_at = 6;
}

// OrganizationProject message
message OrganizationProject {
  uint32 organization_id = 1;
  uint32 project_id = 2;
  int64 created_at = 3;
  int64 updated_at = 4;
}
