syntax = "proto3";

package core.organization;
option go_package = "github.com/ca-risken/core/proto/organization";

import "google/protobuf/empty.proto";
import "organization/entity.proto";
import "project/entity.proto";
import "validate/validate.proto";

// List Organization
message ListOrganizationRequest {
  uint32 organization_id = 1;
  string name = 2 [ (validate.rules).string = {max_len : 64} ];
  ;
}

message ListOrganizationResponse { repeated Organization organization = 1; }

// Create Organization
message CreateOrganizationRequest {
  string name = 1 [ (validate.rules).string = {min_len : 1, max_len : 64} ];
  string description = 2
      [ (validate.rules).string = {min_len : 0, max_len : 255} ];
}

message CreateOrganizationResponse { Organization organization = 1; }

// Update Organization
message UpdateOrganizationRequest {
  uint32 organization_id = 1 [ (validate.rules).uint32.gt = 0 ];
  string name = 2 [ (validate.rules).string = {min_len : 1, max_len : 64} ];
  string description = 3
      [ (validate.rules).string = {min_len : 0, max_len : 255} ];
}

message UpdateOrganizationResponse { Organization organization = 1; }

// Delete Organization
message DeleteOrganizationRequest {
  uint32 organization_id = 1 [ (validate.rules).uint32.gt = 0 ];
}

// List Organization Invitation
message ListOrganizationInvitationRequest {
  uint32 organization_id = 1 [ (validate.rules).uint32.gt = 0 ];
  uint32 project_id = 2 [ (validate.rules).uint32.gt = 0 ];
}

message ListOrganizationInvitationResponse {
  repeated OrganizationInvitation organization_invitations = 1;
}

// Create Organization Invitation
message CreateOrganizationInvitationRequest {
  uint32 organization_id = 1 [ (validate.rules).uint32.gt = 0 ];
  uint32 project_id = 2 [ (validate.rules).uint32.gt = 0 ];
}

message CreateOrganizationInvitationResponse {
  OrganizationInvitation organization_invitation = 1;
}

// Update Organization Invitation Status
message UpdateOrganizationInvitationStatusRequest {
  uint32 organization_id = 1 [ (validate.rules).uint32.gt = 0 ];
  uint32 project_id = 2 [ (validate.rules).uint32.gt = 0 ];
  OrganizationInvitationStatus status = 3 [ (validate.rules).enum = {
    defined_only : true,
    not_in : [ 0 ]
  } ];
}

message UpdateOrganizationInvitationStatusResponse {
  OrganizationInvitation organization_invitation = 1;
}

// List Projects By Organization
message ListProjectsByOrganizationRequest {
  uint32 organization_id = 1 [ (validate.rules).uint32.gt = 0 ];
}

message ListProjectsByOrganizationResponse {
  repeated project.Project project = 1;
}

// Add Projects
message AddProjectsRequest {
  uint32 organization_id = 1 [ (validate.rules).uint32.gt = 0 ];
  uint32 project_id = 2 [ (validate.rules).uint32.gt = 0 ];
}

message AddProjectsResponse { OrganizationProject organization_project = 1; }

// Organization service
service OrganizationService {
  rpc ListOrganization(ListOrganizationRequest)
      returns (ListOrganizationResponse) {}
  rpc CreateOrganization(CreateOrganizationRequest)
      returns (CreateOrganizationResponse) {}
  rpc UpdateOrganization(UpdateOrganizationRequest)
      returns (UpdateOrganizationResponse) {}
  rpc DeleteOrganization(DeleteOrganizationRequest)
      returns (google.protobuf.Empty) {}
  rpc ListOrganizationInvitation(ListOrganizationInvitationRequest)
      returns (ListOrganizationInvitationResponse) {}
  rpc CreateOrganizationInvitation(CreateOrganizationInvitationRequest)
      returns (CreateOrganizationInvitationResponse) {}
  rpc UpdateOrganizationInvitationStatus(
      UpdateOrganizationInvitationStatusRequest)
      returns (UpdateOrganizationInvitationStatusResponse) {}
  rpc ListProjectsByOrganization(ListProjectsByOrganizationRequest)
      returns (ListProjectsByOrganizationResponse) {}
  rpc AddProjects(AddProjectsRequest) returns (AddProjectsResponse) {}
}
